--- a/index.css
+++ b/index.css
@@ -88,11 +88,24 @@ h1, h2 {
     opacity: 0;
 }
 
-.fab, .fas {
-    width: 40px;
-    height: 40px;
+#social-box {
+    width: 400px;
+    height: 200px;
+    background-color: lightcyan;
     display: flex;
     justify-content: center;
+    align-items: center;
+    border-radius: 10%;
+}
+
+.social-icon {
+    margin: 10px;
+}
+
+.fab, .fas {
+    width: 100px;
+    height: 100px;
+    padding: 20px;
 }
 
 .fab:hover, .fas:hover {
@@ -113,9 +126,6 @@ h1, h2 {
     width: 100%;
     height: 100%;
     background-color: white;
-    /*top: 300px;
-    left: 300px;*/
-    /*flex-wrap: wrap;*/
     display: inline;
     opacity: 0;
     overflow: hidden;
@@ -123,12 +133,12 @@ h1, h2 {
 
 .project-card {
     display: inline-block;
-    width: 20%;
+    width: 33%;
     height: 100%;
 }
 
-.after {
-    visibility: hidden;
+.project-card:hover {
+    display: none;
 }
 
 .project-card img {
