--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 body {
     background-image: url('https://i.pinimg.com/originals/17/82/23/178223c0e273b8cc233ab4830c33c90f.jpg');
     background-size: cover;
-    max-height: 100%;
+    height: 100%;
     animation: animation 100s linear infinite;
 }
 
@@ -55,6 +55,10 @@ a {
     font-size: 20px;
 }
 
+#hamburger {
+    visibility: hidden;
+}
+
 
 main {
     min-height: 90vh;
@@ -71,21 +75,53 @@ main {
     justify-content: center;
     align-items: center;
     margin-top: 60px;
+    visibility: visible;
 }
 
 h1, h2 {
     color: white;
+    font-family: 'Rubik', sans-serif;
+}
+
+
+#projects {
+    position: absolute;
+    top: 60px;
+    width: 100%;
+    height: 88%;
+    background-color: white;
+    display: inline;
+    opacity: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.project-card {
+    display: inline-block;
+    width: 33%;
+    height: 100%;
+}
+
+.project-card:hover {
+    opacity: 0.2;
+}
+
+.project-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #social {
     position: absolute;
     top: 60px;
     width: 100%;
-    height: 100%;
+    height: 88%;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 0;
+    visibility: hidden;
 }
 
 #social-box {
@@ -113,36 +149,49 @@ h1, h2 {
     cursor: pointer;
 }
 
-.copyright {
-    font-size: 20px;
+#forward, #back {
     position: absolute;
-    bottom: 0;
-
+    width: 50px;
+    height: 50px;
 }
 
-#projects {
-    position: absolute;
-    top: 60px;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    display: inline;
-    opacity: 0;
-    overflow: hidden;
+#forward {
+    z-index: 10;
+    right: 20px;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    color: grey;
 }
 
-.project-card {
-    display: inline-block;
-    width: 33%;
-    height: 100%;
+#back {
+    z-index: 10;
+    visibility: hidden;
+    left: 10px;
+    top: 50%;
+    cursor: pointer;
+    color: grey;
 }
 
-.project-card:hover {
-    display: none;
-}
-
-.project-card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+@media screen and (max-width: 800px) {
+    #projects {
+        display: block;
+        overflow: visible;
+    }
+    .project-card {
+        width: 100%;
+    }
+    #back {
+        visibility: hidden;
+    }
+    #forward {
+        visibility: hidden;
+    }
+    #hamburger {
+        visibility: visible;
+    }
+    nav ul {
+        display: none;    
+    }
 }
