--- a/index.css
+++ b/index.css
@@ -97,13 +97,25 @@ h1, h2 {
 }
 
 .project-card {
+    position: relative;
     display: inline-block;
     width: 33%;
     height: 100%;
 }
 
-.project-card:hover {
-    opacity: 0.2;
+.project-card:hover > img {
+    opacity: 0.1;
+}
+
+.project-card:hover > p {
+    opacity: 1;
+}
+
+.project-card p {
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    font-size: 20px;
 }
 
 .project-card img {
@@ -111,6 +123,8 @@ h1, h2 {
     height: 100%;
     object-fit: cover;
 }
+
+
 
 #social {
     position: absolute;
@@ -178,8 +192,10 @@ h1, h2 {
     #projects {
         display: block;
         overflow: visible;
+        height: 500%;
     }
     .project-card {
+        height: 20%;
         width: 100%;
     }
     #back {
