--- a/index.css
+++ b/index.css
@@ -61,6 +61,7 @@ a {
 
 
 main {
+    position: relative;
     min-height: 90vh;
     display: flex;
     justify-content: center;
@@ -88,7 +89,7 @@ h1, h2 {
     position: absolute;
     top: 60px;
     width: 100%;
-    height: 88%;
+    height: 100%;
     background-color: white;
     display: inline;
     opacity: 0;
@@ -124,7 +125,42 @@ h1, h2 {
     object-fit: cover;
 }
 
+#tech {
+    position: absolute;
+    width: 100%;
+    height: 88%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    opacity: 0;
+}
 
+#tech-box {
+    width: 400px;
+    height: 400px;
+    background-color: lightcyan;
+    display: flex;
+    border-radius: 10px;
+}
+
+.logo-column {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.logo {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.logo img {
+    justify-content: center;
+    align-items: center;
+}
 
 #social {
     position: absolute;
@@ -207,7 +243,11 @@ h1, h2 {
     #hamburger {
         visibility: visible;
     }
-    nav ul {
-        display: none;    
+    #nav-links {
+        visibility: hidden;
+        position: absolute;
+        top: 60px;
+        display: block;  
+        background-color: lightcyan;  
     }
 }
