--- a/index.css
+++ b/index.css
@@ -28,11 +28,12 @@ nav {
     z-index: 10;
 }
 
-nav ul {
+#nav-links {
     display: flex;
     align-items: center;
     width: 100%;
     justify-content: center;
+    visibility: visible;
 }
 
 li {
@@ -70,8 +71,6 @@ main {
 
 .star {
     position: absolute;
-    width: 2px;
-    height: 2px;
     background-color: white;
     border-radius: 50%;
     opacity: 0;
@@ -82,7 +81,7 @@ main {
     left: 52%;
     width: 2px;
     height: 2px;
-    animation: twinkle 2s ease infinite;
+    animation: twinkle 2.5s ease infinite;
 }
 
 #star2 {
@@ -90,7 +89,7 @@ main {
     left: 88%;
     width: 3px;
     height: 3px;
-    animation: twinkle 3s ease infinite;
+    animation: twinkle 3.4s ease infinite;
 }
 
 #star3 {
@@ -98,7 +97,7 @@ main {
     left: 12%;
     width: 2px;
     height: 2px;
-    animation: twinkle 5s ease infinite;
+    animation: twinkle 5.5s ease infinite;
 }
 
 #star4 {
@@ -106,7 +105,7 @@ main {
     left: 78%;
     width: 1px;
     height: 1px;
-    animation: twinkle 4s ease infinite;
+    animation: twinkle 4.1s ease infinite;
 }
 
 #star5 {
@@ -114,7 +113,7 @@ main {
     left: 84%;
     width: 2px;
     height: 2px;
-    animation: twinkle 2s ease infinite;
+    animation: twinkle 2.2s ease infinite;
 }
 
 #star6 {
@@ -122,7 +121,7 @@ main {
     left: 48%;
     width: 3px;
     height: 3px;
-    animation: twinkle 10s ease infinite;
+    animation: twinkle 10.1s ease infinite;
 }
 
 #star7 {
@@ -130,7 +129,7 @@ main {
     left: 67%;
     width: 2px;
     height: 2px;
-    animation: twinkle 3s ease infinite;
+    animation: twinkle 3.3s ease infinite;
 }
 
 #star8 {
@@ -146,7 +145,7 @@ main {
     left: 77%;
     width: 2px;
     height: 2px;
-    animation: twinkle 2s ease infinite;
+    animation: twinkle 2.3s ease infinite;
 }
 
 #star10 {
@@ -154,7 +153,7 @@ main {
     left: 36%;
     width: 3px;
     height: 3px;
-    animation: twinkle 6s ease infinite;
+    animation: twinkle 6.6s ease infinite;
 }
 
 #star11 {
@@ -162,7 +161,7 @@ main {
     left: 52%;
     width: 2px;
     height: 2px;
-    animation: twinkle 4s ease infinite;
+    animation: twinkle 4.2s ease infinite;
 }
 
 #star12 {
@@ -170,7 +169,7 @@ main {
     left: 14%;
     width: 1px;
     height: 1px;
-    animation: twinkle 1s ease infinite;
+    animation: twinkle 1.4s ease infinite;
 }
 
 #star13 {
@@ -178,7 +177,7 @@ main {
     left: 28%;
     width: 2px;
     height: 2px;
-    animation: twinkle 3s ease infinite;
+    animation: twinkle 3.3s ease infinite;
 }
 
 #star14 {
@@ -186,7 +185,7 @@ main {
     left: 44%;
     width: 3px;
     height: 3px;
-    animation: twinkle 7s ease infinite;
+    animation: twinkle 7.1s ease infinite;
 }
 
 #star15 {
@@ -194,7 +193,7 @@ main {
     left: 34%;
     width: 2px;
     height: 2px;
-    animation: twinkle 2s ease infinite;
+    animation: twinkle 2.1s ease infinite;
 }
 
 #star16 {
@@ -202,7 +201,7 @@ main {
     left: 23%;
     width: 1px;
     height: 1px;
-    animation: twinkle 4s ease infinite;
+    animation: twinkle 4.5s ease infinite;
 }
 
 #star17 {
@@ -210,7 +209,7 @@ main {
     left: 48%;
     width: 2px;
     height: 2px;
-    animation: twinkle 3s ease infinite;
+    animation: twinkle 3.8s ease infinite;
 }
 
 #star18 {
@@ -218,7 +217,7 @@ main {
     left: 36%;
     width: 3px;
     height: 3px;
-    animation: twinkle 2s ease infinite;
+    animation: twinkle 4.9s ease infinite;
 }
 
 #star19 {
@@ -226,7 +225,7 @@ main {
     left: 70%;
     width: 2px;
     height: 2px;
-    animation: twinkle 5s ease infinite;
+    animation: twinkle 5.3s ease infinite;
 }
 
 #star20 {
@@ -234,7 +233,7 @@ main {
     left: 48%;
     width: 1px;
     height: 1px;
-    animation: twinkle 1s ease infinite;
+    animation: twinkle 1.1s ease infinite;
 }
 
 @keyframes twinkle {
@@ -275,7 +274,6 @@ h1, h2 {
     color: white;
     font-family: 'Rubik', sans-serif;
 }
-
 
 #projects {
     position: absolute;
