--- a/index.css
+++ b/index.css
@@ -260,10 +260,11 @@ main {
 }
 
 #banner {
+    position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     justify-content: center;
     align-items: center;
     margin-top: 60px;
@@ -273,6 +274,42 @@ main {
 h1, h2 {
     color: white;
     font-family: 'Rubik', sans-serif;
+    /*animation: float-away 2s infinite;*/
+}
+
+#letter {
+    position: relative;
+    animation: float-away 2s infinite linear;
+    display: inline-block;
+}
+
+@keyframes float-away {
+    from {
+       transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg); 
+    }
+}
+
+#about {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 60px;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+}
+
+#about-box {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    height: 80%;
+    background-color: lightcyan;
+    border-radius: 10px;
 }
 
 #projects {
