--- a/index.css
+++ b/index.css
@@ -264,7 +264,7 @@ main {
     width: 100%;
     height: 100%;
     display: flex;
-    /*flex-direction: column;*/
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 60px;
@@ -277,39 +277,81 @@ h1, h2 {
     /*animation: float-away 2s infinite;*/
 }
 
-#letter {
-    position: relative;
-    animation: float-away 2s infinite linear;
-    display: inline-block;
+h1, h2, p {
+    letter-spacing: .1rem;
 }
 
-@keyframes float-away {
-    from {
-       transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg); 
-    }
-}
+
 
 #about {
     position: absolute;
-    display: flex;
+    /*display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
     top: 60px;
     width: 100%;
     height: 100%;
     visibility: hidden;
 }
 
-#about-box {
+#sample-images {
+    position: relative;
+    margin: 0 auto;
+    width: 250px;
+    height: 75px;
+    top: 0;
+}
+
+#sample-images img {
+    object-fit: cover;
+    cursor: pointer;
+}
+
+#sample-images img:hover {
+    border: 1px solid white;
+}
+
+#about-inner {
+    width: 100%;
     display: flex;
     justify-content: center;
+}
+
+#background-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
     width: 50%;
     height: 80%;
-    background-color: lightcyan;
     border-radius: 10px;
+    background-color: white;
+    margin: 0 auto;
+}
+
+#about-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    height: 80%;
+    border-radius: 10px;
+    background-size: cover;
+    opacity: .3;
+    margin: 0 auto;
+}
+
+#text-box {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 50%;
+    height: 80%;
+    border-radius: 10px;
+    margin: 0 auto;
 }
 
 #projects {
@@ -387,6 +429,7 @@ h1, h2 {
 .logo img {
     justify-content: center;
     align-items: center;
+    mix-blend-mode: multiply;
 }
 
 #social {
