--- a/index.css
+++ b/index.css
@@ -354,6 +354,10 @@ h1, h2, p {
     margin: 0 auto;
 }
 
+#text-box p {
+    padding: 0 5%;
+}
+
 #projects {
     position: absolute;
     top: 60px;
