fixed resizing issue

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
     --primary-color: #0F1A70;
     --secondary-color: #ffffff;
     --tertiary-color: #040806;
-    --accent-color: #4DC9E5;
+    --accent-color: #85E4F8;
 }
 
 * {
