--- a/index.css
+++ b/index.css
@@ -30,7 +30,6 @@ nav {
     width: 100%;
     height: 60px;
     display: flex;
-    opacity: .75;
     z-index: 10;
 }
 
@@ -294,8 +293,7 @@ h2 {
 }
 
 h1, h2 {
-    color: white;
-    /*animation: float-away 2s infinite;*/
+    color: var(--secondary-color);
 }
 
 h1, h2, p, li {
@@ -308,10 +306,6 @@ h1, h2, p, li {
 
 #about {
     position: absolute;
-    /*display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;*/
     top: 60px;
     width: 100%;
     height: 100%;
@@ -351,14 +345,10 @@ h1, h2, p, li {
 
 #background-box {
     position: absolute;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     width: 50%;
     height: 80%;
     border-radius: 10px;
-    background-color: white;
-    margin: 0 auto;
+    background-color: var(--secondary-color);
 }
 
 #about-box {
@@ -371,7 +361,6 @@ h1, h2, p, li {
     border-radius: 10px;
     background-size: cover;
     opacity: .3;
-    margin: 0 auto;
     background-position: center center;
 }
 
@@ -396,7 +385,7 @@ h1, h2, p, li {
     top: 60px;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--secondary-color);
     display: inline;
     opacity: 0;
     overflow: hidden;
@@ -404,7 +393,6 @@ h1, h2, p, li {
 }
 
 .project-card {
-    position: relative;
     display: inline-block;
     width: 33%;
     height: 100%;
@@ -447,7 +435,6 @@ h1, h2, p, li {
 #tech-box {
     width: 400px;
     height: 400px;
-    /*background-color: var(--secondary-color);*/
     display: flex;
     border-radius: 10px;
 }
@@ -468,7 +455,6 @@ h1, h2, p, li {
 .logo img {
     justify-content: center;
     align-items: center;
-    mix-blend-mode: multiply;
 }
 
 #social {
@@ -489,19 +475,16 @@ h1, h2, p, li {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10%;
 }
 
 .social-icon {
     margin: 10px;
-    color: lightgray;
+    color: #DDDBD8;
 }
 
 
 
 .fab, .fas {
-    width: 100px;
-    height: 100px;
     padding: 20px;
 }
 
@@ -564,5 +547,7 @@ h1, h2, p, li {
         top: 60px;
         display: block;  
         background-color: var(--primary-color); 
+        opacity: .75;
+        width: 25%;
     }
 }
