--- a/index.css
+++ b/index.css
@@ -553,8 +553,8 @@ h1, h2, p, li, a {
         position: absolute;
         top: 60px;
         display: block;  
-        background-color: var(--primary-color); 
-        opacity: .75;
+        /*background-color: var(--primary-color);*/ 
+        /*opacity: .75;*/
         width: 25%;
     }
 }
