--- a/index.css
+++ b/index.css
@@ -250,6 +250,14 @@ main {
     animation: twinkle 1.1s ease infinite;
 }
 
+#star21 {
+    top: 30%;
+    left: 50%;
+    width: 3px;
+    height: 3px;
+    animation: shoot 20s;
+}
+
 @keyframes twinkle {
     0% {
         opacity: 0;
@@ -271,6 +279,20 @@ main {
         opacity: 0;
         transform: scale(1.0);
     }
+}
+
+@keyframes shoot {
+    0% {
+        opacity: 0;
+    }
+    48% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+        transform: translate(500px, 50px);
+    }
+    
 }
 
 #banner {
@@ -427,6 +449,7 @@ h1, h2, p, li, a {
     width: 100%;
     height: 88%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     visibility: hidden;
@@ -451,6 +474,7 @@ h1, h2, p, li, a {
     display: flex;
     width: 100%;
     justify-content: center;
+    cursor: pointer;
 }
 
 .logo img {
