--- a/index.css
+++ b/index.css
@@ -360,6 +360,7 @@ h1, h2, p, li, a {
 
 #here {
     color: var(--primary-color);
+    cursor: pointer;
 }
 
 #here:hover {
@@ -396,6 +397,7 @@ h1, h2, p, li, a {
     height: 80%;
     border-radius: 10px;
     margin: 0 auto;
+    z-index: 10;
 }
 
 #text-box p {
