--- a/index.css
+++ b/index.css
@@ -388,8 +388,27 @@ h1, h2, p, li, a {
     height: 80%;
     border-radius: 10px;
     background-size: cover;
-    opacity: .2;
+    opacity: 0;
     background-position: center center;
+}
+
+@keyframes fade-in-out {
+    0% {
+        opacity: 0;
+        z-index: 0;
+    }
+    25% {
+        opacity: 1;
+        z-index: 10;
+    }
+    75% {
+        opacity: 1;
+        z-index: 10;
+    }
+    100% {
+        opacity: 0;
+        z-index: 0;
+    }
 }
 
 #text-box {
@@ -561,6 +580,10 @@ h1, h2, p, li, a {
 @media screen and (max-width: 800px) {
     p {
         font-size: 90%;
+    }
+
+    #sample-images {
+        width: 100%;
     }
 
     #projects {
