--- a/index.css
+++ b/index.css
@@ -376,7 +376,7 @@ h1, h2, p, li, a {
     width: 50%;
     height: 80%;
     border-radius: 10px;
-    background-color: var(--secondary-color);
+    background-color: lightgrey;
 }
 
 #about-box {
@@ -388,13 +388,13 @@ h1, h2, p, li, a {
     height: 80%;
     border-radius: 10px;
     background-size: cover;
-    opacity: 0;
+    opacity: 0.1;
     background-position: center center;
 }
 
 @keyframes fade-in-out {
     0% {
-        opacity: 0;
+        opacity: 0.1;
         z-index: 0;
     }
     25% {
@@ -406,7 +406,7 @@ h1, h2, p, li, a {
         z-index: 10;
     }
     100% {
-        opacity: 0;
+        opacity: 0.1;
         z-index: 0;
     }
 }
